# Sapla

./: .gitignore  CMakeLists.txt  Makefile  README.md  conf.yaml  core.cpp  core.hpp  game.cpp  game.hpp  help.cpp  help.hpp  log.cpp  log.hpp  main.cpp  main.hpp  makeAppIm  menu.cpp  menu.hpp  publish.sh  resources.qrc  settings.cpp  settings.hpp  styles.cpp
base/: flowlayout.cpp  flowlayout.hpp  font.cpp  font.hpp  markdown.cpp  markdown.hpp  parseMd.cpp  rectIt.cpp  rectIt.hpp  seedrng.cpp  seedrng.hpp  svgRend.cpp  svgRend.hpp  svgUtils.cpp  svgUtils.hpp  svgWid.hpp
cards/: cardList.cpp  cardList.hpp  cardTree.cpp  cardTree.hpp  cardTyps.cpp  cardTyps.hpp  formElm.cpp  formElm.hpp  formElms.cpp  formElms.hpp  getCards.cpp  getCards.hpp
extra/: deckOpts.cpp  deckOpts.hpp
games/: base.cmake  getGames.cpp  getGames.hpp  link.hpp  register.hpp
games/basic/: CMakeLists.txt  game.cpp  game.hpp  playScn.cpp  playScn.hpp  winScn.cpp
games/basic/items/: cardIt.cpp  cardLayouts.hpp  gridLayout.cpp
games/builtin/: BIResources.qrc  CMakeLists.txt  game.cpp  game.hpp  playScn.cpp  playScn.hpp  winScn.cpp
games/builtin/items/: cardIt.cpp  cardIt.hpp
games/grid/: CMakeLists.txt  game.cpp  gridResources.qrc  playScn.cpp  playScn.hpp  winScn.hpp
games/grid/items/: cardIt.cpp  cardIt.hpp  gridLayout.cpp
items/: cardIt.cpp  cardIt.hpp  cardLayouts.hpp  cardTree.cpp  cardTree.hpp  deckProgress.cpp  deckProgress.hpp  gridLayout.cpp  gridLayout.hpp  layout.cpp  listIt.cpp  listIt.hpp  listWid.cpp  listWid.hpp  multiprogress.cpp  multiprogress.hpp  overlay.hpp  progress.cpp  progress.hpp  scheduleInfTxt.cpp  scheduleInfTxt.hpp  sideRends.cpp  sideRends.hpp  treeItem.cpp  treeItem.hpp
items/base/: font.cpp  font.hpp  markdown.cpp  markdown.hpp  myItem.cpp  myItem.hpp  rectIt.hpp  svgBtnItem.cpp  svgBtnItem.hpp  svgItem.cpp  svgItem.hpp  svgRend.cpp  svgRend.hpp
notes/: builtinFeats.cpp  cardList.cpp  cardList.hpp  decks.cpp  decks.hpp  defaultNotes.hpp  eximport.cpp  eximport.hpp  features.cpp  features.hpp  filter.cpp  filter.hpp  getNotes.cpp  getNotes.hpp  note.cpp  note.hpp  noteTree.cpp  noteTree.hpp  pile.hpp  schedule.cpp  schedule.hpp  secretFeat.cpp  template.cpp  template.hpp
notes/features/: builtinFeats.cpp  defaultFeats.cpp  features.cpp  features.hpp  hiddenFeat.cpp  hideShuffFeats.cpp  secretFeat.cpp
plugins/: base.cmake  getPlugins.cpp  getPlugins.hpp  link.hpp  register.hpp
plugins/builtin/: CMakeLists.txt  game.cpp  playScn.cpp  playScn.hpp
plugins/builtin/items/: cardIt.cpp  cardIt.hpp
plugins/grid/: CMakeLists.txt  game.cpp  playScn.cpp  playScn.hpp
plugins/grid/gridIts/: cardIt.cpp  cardIt.hpp  cardLayouts.hpp  gridLayout.cpp  gridLayout.hpp  overlay.hpp
plugins/grid/items/: cardIt.cpp  cardIt.hpp  gridLayout.cpp  gridLayout.hpp
plugins/winter/: CMakeLists.txt  init.cpp
scenes/: baseScn.cpp  baseScn.hpp  browseScn.cpp  browseScn.hpp  createScn.cpp  createScn.hpp  gameScn.cpp  gameScn.hpp  gameView.cpp  gameView.hpp  homeScn.cpp  homeScn.hpp  loseScn.cpp  loseScn.hpp  playScn.cpp  playScn.hpp  pluginView.cpp  pluginView.hpp  winScn.cpp  winScn.hpp
scenes/items/: FClayouts.hpp  gridLayout.cpp  gridLayout.hpp  layout.hpp  layouts.hpp
scenes/xtra/: browseInfo.cpp  browseInfo.hpp  browseInfoBase.hpp  deckOpts.cpp  lineEdit2.hpp
wids/: featInfo.cpp  featInfo.hpp  listWid.cpp  ovrlWrap.cpp  ovrlWrap.hpp  schdInfWid.cpp  schdInfWid.hpp  svgBtn.cpp  svgBtn.hpp  svgPic.cpp  svgPic.hpp  topbar.cpp  topbar.hpp
